2006-10-29  Bruno Haible  <bruno@clisp.org>

	Make it compile in C++ mode.
	* gettextP.h (SWAP): Don't use K&R syntax in C++ mode.
	* gmo.h (struct segment_pair): Move out of the scope of struct
	sysdep_string.
	* dcigettext.c (DCIGETTEXT): Cast mempcpy results.
	* loadmsgcat.c (_nl_load_domain): Cast alloca result.
	* localealias.c (read_alias_file): Cast memcpy result.
	* plural-exp.h (enum expression_operator): Move out of the scope of
	struct expression. Rename from 'enum operator'.
	* plural-exp.c (plvar, plone, GERMANIC_PLURAL): Don't use C99 named
	initializer syntax in C++ mode.
	* plural.y (%union, new_exp, new_exp_0, new_exp_1, new_exp_2,
	new_exp_3): Update.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* localename.c (HAVE_LOCALE_NULL): Test __GLIBC__ instead of
	__GNU_LIBRARY__.

2006-10-24  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (LIBINTL_VERSION): Bump to 0.16.

2006-10-18  Bruno Haible  <bruno@clisp.org>

	* lock.h [C++]: Wrap definitions in extern "C".

2006-10-17  Paul Eggert  <eggert@cs.ucla.edu>

	* localcharset.c: Do not check HAVE_SETLOCALE.

2006-10-09  Bruno Haible  <bruno@clisp.org>

	* langprefs.c: Update comment about locale name syntax.
	* localename.c: Likewise.

2006-10-11  Paul Eggert  <eggert@cs.ucla.edu>
            Bruno Haible  <bruno@clisp.org>

	* printf-args.h (arg_type, argument): Test HAVE_LONG_LONG_INT
	instead of HAVE_LONG_LONG.
	* printf-args.c (printf_fetchargs): Likewise.
	* printf-parse.c (PRINTF_PARSE): Likewise.
	* vasnprintf.c (VASNPRINTF): Likewise.

2006-10-08  Bruno Haible  <bruno@clisp.org>

	* printf.c: Include errno.h, limits.h.
	(EOVERFLOW): New fallback definition.
	(libintl_vfprintf): Test whether the output length is > INT_MAX.
	(libintl_vsprintf): Likewise.
	(libintl_vsnprintf): Fix bug when vasnprintf requested more space than
	needed. Fix return value when the entire result string would be larger