@@ -1,3 +1,7 @@
+2006-11-01  Bruno Haible  <bruno@clisp.org>
+
+	* printf-parse.c (PRINTF_PARSE): Cast malloc/realloc results.
+
 2006-10-29  Bruno Haible  <bruno@clisp.org>
 
 	Make it compile in C++ mode.
